add support for adding platform wide schema registry acls in the topology description logic

--- a/example/descriptor.yaml
+++ b/example/descriptor.yaml
@@ -52,3 +52,6 @@ projects:
         config:
           replication.factor: "1"
           num.partitions: "1"
+platform:
+  schema_registry:
+    - principal: "User:SchemaRegistry"
