--- a/src/test/resources/descriptor.yaml
+++ b/src/test/resources/descriptor.yaml
@@ -50,3 +50,7 @@ projects:
         config:
           replication.factor: "1"
           num.partitions: "1"
+platform:
+  schema_registry:
+    - principal: "User:SchemaRegistry01"
+    - principal: "User:SchemaRegistry02"
