add basic authentication with a setup hardcoded user

--- a/server-api/pom.xml
+++ b/server-api/pom.xml
@@ -119,6 +119,18 @@
       <groupId>io.swagger.core.v3</groupId>
       <artifactId>swagger-annotations</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.micronaut.security</groupId>
+      <artifactId>micronaut-security</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.micronaut.security</groupId>
+      <artifactId>micronaut-security-annotations</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.micronaut.security</groupId>
+      <artifactId>micronaut-security-jwt</artifactId>
+    </dependency>
     <!-- Topology Builder dependencies-->
     <!-- <dependency>
       <groupId>org.apache.logging.log4j</groupId>
