--- a/server-api/src/main/resources/application.yml
+++ b/server-api/src/main/resources/application.yml
@@ -5,6 +5,14 @@ micronaut:
     property:
       naming:
         strategy: KEBAB_CASE
+  security:
+    authentication: bearer
+    token:
+      jwt:
+        signatures:
+          secret:
+            generator:
+              secret: pleaseChangeThisSecretForANewOne
   router:
     static-resources:
       swagger:
